feat: adjustment controller and repository
